--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,3 +1,15 @@
+
+{% if request.user.is_authenticated %}
+
+<p>{{request.user}}</p>
+<a href="{% url 'logout' %}">Logout</a>
+
+{% else %}
+<a href="{% url 'login' %}">Log In</a>
+
+{% endif %}
+
+<hr>
 <h1>My To Do list</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
 
@@ -16,6 +28,9 @@
         <td>{{task.title}}</td>
         <td><a href="{% url 'task' task.id %}">View</a></td>
         <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+
+
 
     </tr>
     {% empty %}
