--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -14,6 +14,12 @@
 <a href="{% url 'task-create' %}">Add Task</a>
 
 
+<form method="Get">
+    <input type="text" name="search-area" value="{{search_input}}">
+    <input type="submit" value="Search">
+</form>
+
+
 <table>
     <tr>
         <th>Item</th>
