--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,3 +1,9 @@
+{% extends 'base/main.html' %}
+
+{% block content %}
+
+
+
 <h1>Login</h1>
 
 
@@ -10,3 +16,6 @@
 </form>
 
 <p>You do not have an account? <a href="{% url 'register' %}">Register Here</a></p>
+
+
+{% endblock content %}
