--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,3 +1,9 @@
+{% extends 'base/main.html' %}
+
+{% block content %}
+
+
+
 <h1>Register</h1>
 
 
@@ -10,3 +16,6 @@
 </form>
 
 <p>Already have an account? <a href="">Login</a></p>
+
+
+{% endblock content %}
