--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,3 +1,7 @@
+{% extends 'base/main.html' %}
+
+{% block content %}
+
 <h3>Task form</h3>
 
 <a href="{%url 'tasks' %}">Return to main page</a>
@@ -7,3 +11,6 @@
     {{form.as_p}}
     <input type="submit" value="Submit">
 </form>
+
+
+{% endblock content %}
