--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -7,11 +7,47 @@
         <title>TO Do List</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+    
+        <style>
+            body {
+                background-color: #FAFAFA;
+                font-family: 'Nunito', sans-serif;
+                padding-top: 50px;
+            }
 
-    <style>
-        body {
-            background-color: blueviolet;
-        }
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6,
+                {
+                font-family: 'Raleway', sans-serif;
+            }
+
+            a,
+            p {
+                color: #4b5156
+            }
+
+            a {
+                font-weight: 600;
+            }
+
+            .container {
+                max-width: 550px;
+                margin: auto;
+                background-color: #fff;
+                -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+                box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+            }
+
+            input {
+                outline: none;
+                border: none;
+            }
     </style>
     </head>
     <body>
